--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>XR</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="XR" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=.0" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>IndusXR — Hands-Free Mastery for Everyday Life</title>
+  <meta name="description"
+    content="IndusXR turns any PDF manual into AR-ready, step-by-step instructions. Hands-Free Mastery for Everyday Life." />
+  <meta name="author" content="IndusXR" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- TODO: Update og:title to match your application name -->
+  <meta property="og:title" content="IndusXR — Hands-Free Mastery for Everyday Life" />
+  <meta property="og:description"
+    content="Turn any PDF manual into AR-ready, step-by-step instructions. Hands-Free Mastery for Everyday Life." />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
